# nedrexdb_v2d

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.full  Dockerfile_full  README.md  build.py  build.sh  build.sh_old  clean_volumes.sh  docker-compose.dev.yml  docker-compose.yml  launch_docker.sh  pyproject.toml  set_metadata.py  setup_data.sh  update.sh
.github/workflows/: docker-base.yml  docker-main.yml  docker-neo4j.yml  docker-publish.yml
config/: licensed_config.toml  open_config.toml
cron/: cron.dev  cron.prod
docker/docker_base/: Dockerfile
docker/neo4j/: Dockerfile
docker_base/: Dockerfile
nedrexdb/: __init__.py  common.py  llm.py  logger.py
nedrexdb/control/: docker.py  embeddings.py
nedrexdb/data/: hippie_perplexity_technique_scores.tsv
nedrexdb/db/: __init__.py  collection_stats.py  import_embeddings.py  mongo_to_neo.py  update_db_version.py
nedrexdb/db/models/edges/: gene_associated_with_disorder.py  protein_interacts_with_protein.py
nedrexdb/db/models/nodes/: gene.py  protein.py
nedrexdb/db/parsers/: biogrid.py  chembl.py  clinvar.py  cosmic.py  drug_central.py  go.py  hippie.py  hpa.py  iid.py  intact.py  intogen.py  mondo.py  ncbi.py  ncg.py  omim.py  opentargets.py  orphanet.py  repotrial.py  sider.py  unichem.py  uniprot.py  uniprot_signatures.py
nedrexdb/downloaders/: __init__.py  biogrid.py  chembl.py  cosmic.py  intogen.py  ncg.py  opentargets.py  orphanet.py
nedrexdb/post_integration/: create_vector_indices.py  embedding_config.py  neo4j_db_adjustments.py
neo4j/: Dockerfile  modify_neo4j_conf.sh
tests/: test_build_logic.py  test_data_transformations.py  test_query_generation.py
