[tool.poetry]
name = "nedrexdb"
version = "0.3.0"
description = ""
authors = ["james-skelton <james.skelton@newcastle.ac.uk>","andreas-maier <andreas.maier-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.14.1,<5.0.0"
mongoengine = "^0.28.2"
docker = "^7.1.0"
more-itertools = "^8.8.0"
loguru = "^0.6.0"
requests = "^2.32.4"
beautifulsoup4 = "^4.9.3"
biopython = "^1.81"
xmljson = "^0.2.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
pydantic = "2.7.4"
tqdm = "^4.66.1"
pandas = "^1.3.4"
obonet = "^1.1.1"
lxml = "^4.6.3"
rdflib = "^6.0.2"
black = "^24.3.0"
mypy = "^0.910"
flake8 = "^4.0.1"
py = "^1.11.0"
idna = "^3.7"
rdkit = "^2023.9.5"
numpy = "1.26.4"
langchain-neo4j = "^0.4.0"
h11 = "^0.16.0"
pillow = "^11.3.0"
urllib3 = "^2.5.0"
aiohttp = "^3.12.14"
openpyxl = "^3.1.2"
pyspark = "^3.5.6"
openai = "^1.102.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.14.1"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
